# explorations

./: .gitignore  0001b-finish-uv-warning.patch  0003-done-path-write-guarantee.patch  README.md
cv_in_quarto/: Martinez-Luis_resume_academia.qmd  Martinez-Luis_resume_industry.qmd  Martinez-Luis_resume_industry_b1-vertex.qmd  development_log.html  development_log.md  development_log.qmd  errors.html  errors.md  errors.qmd  luis_martinez_cv.qmd  master-cv_Martinez-Luis.qmd  pull_all.sh  push_all.sh  render_all_worktrees.sh  render_quarto_files_in_target_dir.sh  template_cover-letter.qmd  workflow_guide.html  workflow_guide.qmd
drill/: README.md  api.js  boot.js  config.py  db.py  decisions.md  dependency-plan.mermaid  drill.js  drill.py  el.js  http_layer.py  index.html  logic.py  phase0.md  pyproject.toml  readme-tests.md  roadmap.md  roadmap.py  session.js  setup.md  spec.md  speech.js  stage.js  state.js  stats.js  thread-launch-kit.md  timing.js
drill/llm/: 260626_roadmap-rec-after-D2.md  CODING_CONVENTIONS.md  CONTEXT.md  PROJECT.md  STATUS.md  adr-index.md  authoring-guide-2026-07.md  clone-and-verify.md  consolidation-findings.md  decisions.md  design-A-quick-consolidation.md  design-handoffs-BCDE.md  feature-backlog-2026-07.md  g1-findings.md  handoff-qol-recall-thread.md  implementation-plan.md  knowledge-capture.md  llm-thread-protocol.md  naming-options-2026-07.md  readme-tests.md  refinements-and-wiring.md  roadmap-1-modularization-commit-plan.md  roadmap-1-modularization-findings.md  roadmap.md  setup.md  study-curriculum-and-conventions.md  thread-N-vocab-plan.md  thread-launch-kit.md  thread-migrate-T2-wave0.md  thread-model-D1-wave1.md  usage-and-study-guide.md  use-period-plan-2026-07.md  v1-completion-guide.md  verification-practices.md  vocab-language-futures.md
drill/llm/handoffs/: 1-to-implementation.md  1b-to-execution.md  2-to-frontend-cutover.md  3-to-E10-cutover.md  5-to-design.md  5-to-implementation.md  handoff-2-implementation-to-ui.md  handoff-2-to-implementation.md  handoff-D2-to-implementation.md  handoff-kickoff-2-difficulty-design.md  handoff-modularization.md  launch-2-ui-selector.md
drill/llm/prompts/: adversarial-review.md  clone-and-verify.md  commit-planning.md  plan-review.md  spike-and-verify.md
drill/llm/spike/: author.py  author_shell.py  scheduler_port.py  test_author.py  test_bitwise_and_epsilon.py  test_migration_and_simulation.py  test_port_equivalence.py  test_selection_and_throttle.py
drill/tests/: README.md  _support.py  conftest.py  run.sh  test_boundary_purity.py  test_cli.py  test_db.py  test_generator_property.py  test_http.py  test_logic.py  test_migrate.py  test_migrate_sm2.py
drill/tests/frontend/: _harness.js  api.test.js  boot.module.test.js  difficulty.test.js  drill.module.test.js  drill.test.js  el.module.test.js  hints.test.js  import.test.js  ownership.guard.test.js  recall.test.js  session.module.test.js  speech.module.test.js  speech.test.js  stage.module.test.js  state.test.js  stats.integration.test.js  stats.module.test.js  stats.test.js  timing.module.test.js  timing.test.js
drill/tools/: migrate_sm2_exercises.py
finances_code/: README.md  finances.sh
kbd_code/: README.md  codedojo-bootstrap.sh  codedojo_manifest.txt  kbd.lua  kbd.sh  kbd_audit.sh  kbd_dir.md  kbd_import-phone-notes.sh  kbd_normalize-tags.sh  kbd_setup.sh  setup_issues.md
llm/: handoff-D1-to-arithmetic.md  review-D1.md
llm_playbook/: MANIFEST.md  README.md  claude-opus-4.8_repair-notes.md  claude-opus-4.8_taste.md  close-PLAYBOOK-IMPL-003.md  consolidation-PLAYBOOK-DESIGN-002.md  implementation-plan.md  kickoff-PLAYBOOK-IMPL-003.md  plan-edits-PLAYBOOK-DESIGN-002.md  runbook-PLAYBOOK-DESIGN-002.md
llms/: ARCHITECTURE.md  FRICTION.md  archive.py  demo_terminal_output.py  directive-variants.md  errors.md  exercises.md  fix_mojibake.lua  llm.py  llmpy_cheatsheet.md  prompts.sh  pyproject.toml  schema.sql  setup.md  terminal_output.py  workbench.py
python/: bs_elife_test.py  bs_mitbio_test.py  bs_molcell_test.py  bs_nature_test.py  bs_neo_test.py  bs_saker_test.py  bs_science_test.py  bs_test.py  bs_zman_test.py  extract-texts.py  extracting_sequences_for_ARS.py  pdf2doi-test.py  pdfminer-pillow-tabula.py  pdfplumber.py  pyzotero_claude.py  sgdmine_example.py  zotero.py
pyutils/: README.md  pyproject.toml
pyutils/src/pyutils/: __init__.py  terminal_output.py
pyutils/tests/: test_terminal_output.py
refactor_microgpt/: .gitignore  microgpt.py  one_shot_analysis_and_plan.md  refactor_microgpt.py  refactoring_plan.md  refactoring_plan_rebaselined_1.md  template_rebaseline_plan.md  template_reusable_prompt.md  template_reusable_prompt_start_of_thread.md  verify_01_instrument_timing.py  verify_02_grad_norms.py
retrieval/: basic_retrieval.R  documentation.md  errors.md  notes.md  questions.txt
scripts/: decomplect-probe.sh  pull_all.sh  push_all.sh  rebase_all.sh  render_all.sh  sparse-clone.sh
sm2/: .gitignore  README.md  pyproject.toml  reset_state.sh  sm2.py  sm2_authoring.sh  terminal_output.py  test_sm2.py  test_terminal_output.py
(+392 files in other folders)
